#333 feat: 메서드 매개변수 중 AuthMember를 MemberAuthentication로 변경 및 코드 정리